plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
    mavenLocal()
    mavenCentral()
}

ext {
    junitVersion = '5.9.1'
}

sourceCompatibility = '19'
targetCompatibility = '19'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
//    mainModule = 'com.example.demo'
    mainClass = 'mg.disturb.Presence.App'
}

javafx {
    version = '19'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'org.controlsfx:controlsfx:11.1.2'
    implementation 'org.kordamp.ikonli:ikonli-unicons-pack:12.3.1'
    implementation 'com.jfoenix:jfoenix:9.0.10'
    implementation 'org.jfxtras:jfxtras-controls:17-r1'
    implementation 'io.github.palexdev:materialfx:11.16.1'
    implementation 'org.hibernate:hibernate-core:6.2.0.CR3'
    implementation 'mysql:mysql-connector-java:8.0.33'
    implementation 'cglib:cglib:3.3.0'
    implementation 'jakarta.persistence:jakarta.persistence-api:2.2.3'
    implementation 'org.apache.pdfbox:pdfbox:2.0.28'
}

run{
    jvmArgs = [
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
            "--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED",
            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
    ]
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}
